<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/outputText"
        android:gravity="end"
        android:paddingStart="2dp"
        android:hint="@string/type"
        android:textColorHint="@color/new_hint"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line1"
        android:layout_marginBottom="50dp"
        android:gravity="end"
        android:paddingStart="2dp"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/buttonPanel"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/line"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/bt_ac"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/cut"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_percent"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/percentage"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_del"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/bt_divide"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/bt_seven"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_nine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/bt_multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/bt_four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/bt_minus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:paddingBottom="10dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/bt_one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/bt_plus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/bt_d_zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/zero_zero"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:padding="5dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_dot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_num"
                android:paddingBottom="10dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/bt_equal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_back_opr"
                android:padding="5dp"
                android:text="@string/equals_to"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>